--- a/backend-fyp/package.json
+++ b/backend-fyp/package.json
@@ -24,6 +24,9 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.3",
+    "onesignal": "^0.1.2",
+    "onesignal-node": "^3.4.0",
+    "react-onesignal": "^3.0.1",
     "validator": "^13.11.0"
   }
 }
